---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 11. 11. 2023
  Features:
    - Added new mods
      rail-crossing-protection (0.0.1)
      train-limit-linter (1.0.8)
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 11. 11. 2023
  Minor Features:
    - Revert the function to check if a mod exists
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 11. 11. 2023
  Features:
    - Added new mods
      AutoDeconstruct (0.3.10)
      extended-descriptions (1.2.1)
      factoryplanner (1.1.72)
      FactorySearch (1.10.14)
      RateCalculator (3.2.3)
      RemoteConfiguration (1.2.4)
      StatsGui (1.4.1)
      Todo-List (19.3.0)
      Waterfill_v17 (1.1.0)
      YARM (0.10.14)
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 11. 11. 2023
  Features:
    - Updated some mods
      Cardinal (-> 0.2.0)
      blueprint sandboxes (-> 1.16.8)
      Pacifist (-> 0.3.1)
      Smart Inserters (-> 1.2.1)
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 06. 11. 2023
  Features:
    - Removed lcw_tweak (which had a dependency on logistic-cargo-wagon)
  Info:
    - Added changelog for 1.2.0
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 06. 11. 2023
  Features:
    - Removed some mods which added new item
      beautiful_bridge_railway
      fcpu
      logistic-cargo-wagon
      logtech-beacon
      miniloader
      more_circuit_signals_UPDATED
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 01. 11. 2023
  Minor Features: