@@ -12,6 +12,7 @@
         "Automatic_Train_Painter = 1.2.0",
         "auto_manual_mode = 0.0.9",
         "blueprint-sandboxes = 1.16.8",
+        "blueprint-variables = 0.0.7",
         "Bottleneck = 0.11.7",
         "cardinal = 0.2.0",
         "CursorEnhancements = 2.1.0",
@@ -32,11 +33,11 @@
         "RealisticFlashlight = 0.2.4",
         "RemoteConfiguration = 1.2.4",
         "Shortcuts-ick = 1.1.28",
-        "Smart_Inserters = 1.2.1",
+        "Smart_Inserters = 1.2.2",
         "Squeak Through = 1.8.2",
         "StatsGui = 1.4.1",
         "Todo-List = 19.3.0",
-        "train-limit-linter = 1.0.8",
+        "train-limit-linter = 1.0.13",
         "TrainScheduleHelper = 1.0.2",
         "UtilizationMonitorBlargh = 0.8.17",
         "Waterfill_v17 = 1.1.0",
