@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 
+Date: 
+  Features:
+    - Updated new mods
+      Smart_Inserters (-> 1.2.2)
+      train-limit-linter (-> 1.0.13)
+---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 11. 11. 2023
   Features:
